Syntax/ParLattepp.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParLattepp
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsLattepp
import LexLattepp

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'       { PT _ (TS _ 1)  }
  '!='      { PT _ (TS _ 2)  }
  '%'       { PT _ (TS _ 3)  }
  '&&'      { PT _ (TS _ 4)  }
  '('       { PT _ (TS _ 5)  }
  ')'       { PT _ (TS _ 6)  }
  '*'       { PT _ (TS _ 7)  }
  '+'       { PT _ (TS _ 8)  }
  '++'      { PT _ (TS _ 9)  }
  ','       { PT _ (TS _ 10) }
  '-'       { PT _ (TS _ 11) }
  '--'      { PT _ (TS _ 12) }
  '.'       { PT _ (TS _ 13) }
  '/'       { PT _ (TS _ 14) }
  ':'       { PT _ (TS _ 15) }
  ';'       { PT _ (TS _ 16) }
  '<'       { PT _ (TS _ 17) }
  '<='      { PT _ (TS _ 18) }
  '='       { PT _ (TS _ 19) }
  '=='      { PT _ (TS _ 20) }
  '>'       { PT _ (TS _ 21) }
  '>='      { PT _ (TS _ 22) }
  '['       { PT _ (TS _ 23) }
  '[]'      { PT _ (TS _ 24) }
  ']'       { PT _ (TS _ 25) }
  'boolean' { PT _ (TS _ 26) }
  'class'   { PT _ (TS _ 27) }
  'else'    { PT _ (TS _ 28) }
  'extends' { PT _ (TS _ 29) }
  'false'   { PT _ (TS _ 30) }
  'for'     { PT _ (TS _ 31) }
  'if'      { PT _ (TS _ 32) }
  'int'     { PT _ (TS _ 33) }
  'new'     { PT _ (TS _ 34) }
  'null'    { PT _ (TS _ 35) }
  'return'  { PT _ (TS _ 36) }
  'string'  { PT _ (TS _ 37) }
  'true'    { PT _ (TS _ 38) }
  'void'    { PT _ (TS _ 39) }
  'while'   { PT _ (TS _ 40) }
  '{'       { PT _ (TS _ 41) }
  '||'      { PT _ (TS _ 42) }
  '}'       { PT _ (TS _ 43) }
  L_Ident   { PT _ (TV _)    }
  L_integ   { PT _ (TI _)    }
  L_quoted  { PT _ (TL _)    }

%%

Ident :: { (AbsLattepp.BNFC'Position, AbsLattepp.Ident) }
Ident  : L_Ident { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Ident (tokenText $1)) }

Integer :: { (AbsLattepp.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (AbsLattepp.BNFC'Position, String) }
String   : L_quoted { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (AbsLattepp.BNFC'Position, AbsLattepp.Program) }
Program
  : ListTopDef { (fst $1, AbsLattepp.Program (fst $1) (snd $1)) }

TopDef :: { (AbsLattepp.BNFC'Position, AbsLattepp.TopDef) }
TopDef
  : Type Ident '(' ListArg ')' Block { (fst $1, AbsLattepp.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }
  | 'class' Ident ClassBlock { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ClassDef (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3)) }
  | 'class' Ident 'extends' Ident ClassBlock { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ExtClassDef (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4) (snd $5)) }

ListTopDef :: { (AbsLattepp.BNFC'Position, [AbsLattepp.TopDef]) }
ListTopDef
  : TopDef { (fst $1, (:[]) (snd $1)) }
  | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (AbsLattepp.BNFC'Position, AbsLattepp.Arg) }
Arg
  : Type Ident { (fst $1, AbsLattepp.Arg (fst $1) (snd $1) (snd $2)) }

ListArg :: { (AbsLattepp.BNFC'Position, [AbsLattepp.Arg]) }
ListArg
  : {- empty -} { (AbsLattepp.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (AbsLattepp.BNFC'Position, AbsLattepp.Block) }
Block
  : '{' ListStmt '}' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Block (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ClassBlock :: { (AbsLattepp.BNFC'Position, AbsLattepp.ClassBlock) }
ClassBlock
  : '{' ListClassStmt '}' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ClassBlock (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListClassStmt :: { (AbsLattepp.BNFC'Position, [AbsLattepp.ClassStmt]) }
ListClassStmt
  : {- empty -} { (AbsLattepp.BNFC'NoPosition, []) }
  | ClassStmt ListClassStmt { (fst $1, (:) (snd $1) (snd $2)) }

ListStmt :: { (AbsLattepp.BNFC'Position, [AbsLattepp.Stmt]) }
ListStmt
  : {- empty -} { (AbsLattepp.BNFC'NoPosition, []) }
  | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

ClassStmt :: { (AbsLattepp.BNFC'Position, AbsLattepp.ClassStmt) }
ClassStmt
  : ';' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ClassEmpty (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | Type ListIdent ';' { (fst $1, AbsLattepp.ClassDecl (fst $1) (snd $1) (snd $2)) }
  | Type Ident '(' ListArg ')' Block { (fst $1, AbsLattepp.ClassMethod (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

Stmt :: { (AbsLattepp.BNFC'Position, AbsLattepp.Stmt) }
Stmt
  : ';' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Empty (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | Block { (fst $1, AbsLattepp.BStmt (fst $1) (snd $1)) }
  | Type ListItem ';' { (fst $1, AbsLattepp.Decl (fst $1) (snd $1) (snd $2)) }
  | ExtIdent '=' Expr ';' { (fst $1, AbsLattepp.Ass (fst $1) (snd $1) (snd $3)) }
  | ExtIdent '++' ';' { (fst $1, AbsLattepp.Incr (fst $1) (snd $1)) }
  | ExtIdent '--' ';' { (fst $1, AbsLattepp.Decr (fst $1) (snd $1)) }
  | 'return' Expr ';' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Ret (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'return' ';' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.VRet (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | 'if' '(' Expr ')' Stmt { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Cond (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'if' '(' Expr ')' Stmt 'else' Stmt { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.CondElse (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
  | 'while' '(' Expr ')' Stmt { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.While (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'for' '(' Type Ident ':' ExtIdent ')' Stmt { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.For (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $4) (snd $6) (snd $8)) }
  | Expr ';' { (fst $1, AbsLattepp.SExp (fst $1) (snd $1)) }

Item :: { (AbsLattepp.BNFC'Position, AbsLattepp.Item) }
Item
  : Ident { (fst $1, AbsLattepp.NoInit (fst $1) (snd $1)) }
  | Ident '=' Expr { (fst $1, AbsLattepp.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (AbsLattepp.BNFC'Position, [AbsLattepp.Item]) }
ListItem
  : Item { (fst $1, (:[]) (snd $1)) }
  | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

ListIdent :: { (AbsLattepp.BNFC'Position, [AbsLattepp.Ident]) }
ListIdent
  : Ident { (fst $1, (:[]) (snd $1)) }
  | Ident ',' ListIdent { (fst $1, (:) (snd $1) (snd $3)) }

ExtIdent :: { (AbsLattepp.BNFC'Position, AbsLattepp.ExtIdent) }
ExtIdent
  : Ident { (fst $1, AbsLattepp.Id (fst $1) (snd $1)) }
  | Ident '[' Expr ']' { (fst $1, AbsLattepp.ArrId (fst $1) (snd $1) (snd $3)) }
  | Expr6 '.' Expr6 { (fst $1, AbsLattepp.AttrId (fst $1) (snd $1) (snd $3)) }

PrimType :: { (AbsLattepp.BNFC'Position, AbsLattepp.PrimType) }
PrimType
  : 'int' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Int (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Str (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | 'boolean' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Bool (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | 'void' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Void (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }

Type :: { (AbsLattepp.BNFC'Position, AbsLattepp.Type) }
Type
  : PrimType { (fst $1, AbsLattepp.Primitive (fst $1) (snd $1)) }
  | Ident { (fst $1, AbsLattepp.ObjectType (fst $1) (snd $1)) }
  | Type '[]' { (fst $1, AbsLattepp.Array (fst $1) (snd $1)) }

ListType :: { (AbsLattepp.BNFC'Position, [AbsLattepp.Type]) }
ListType
  : {- empty -} { (AbsLattepp.BNFC'NoPosition, []) }
  | Type { (fst $1, (:[]) (snd $1)) }
  | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr7 :: { (AbsLattepp.BNFC'Position, AbsLattepp.Expr) }
Expr7
  : '(' Ident ')' Expr6 { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ECast (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | '(' PrimType ')' Expr6 { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ECastPrim (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | '(' Expr ')' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr6 :: { (AbsLattepp.BNFC'Position, AbsLattepp.Expr) }
Expr6
  : 'new' Ident { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ENewObject (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'new' Type '[' Expr ']' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ENewArr (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | 'null' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ENull (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | Expr6 '.' Expr6 { (fst $1, AbsLattepp.EObject (fst $1) (snd $1) (snd $3)) }
  | Ident '[' Expr ']' { (fst $1, AbsLattepp.EArr (fst $1) (snd $1) (snd $3)) }
  | Ident { (fst $1, AbsLattepp.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, AbsLattepp.ELitInt (fst $1) (snd $1)) }
  | 'true' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ELitTrue (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.ELitFalse (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | Ident '(' ListExpr ')' { (fst $1, AbsLattepp.EApp (fst $1) (snd $1) (snd $3)) }
  | String { (fst $1, AbsLattepp.EString (fst $1) (snd $1)) }
  | Expr7 { (fst $1, (snd $1)) }

Expr5 :: { (AbsLattepp.BNFC'Position, AbsLattepp.Expr) }
Expr5
  : '-' Expr6 { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Neg (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Not (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (AbsLattepp.BNFC'Position, AbsLattepp.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, AbsLattepp.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (AbsLattepp.BNFC'Position, AbsLattepp.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, AbsLattepp.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (AbsLattepp.BNFC'Position, AbsLattepp.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, AbsLattepp.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (AbsLattepp.BNFC'Position, AbsLattepp.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, AbsLattepp.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

Expr :: { (AbsLattepp.BNFC'Position, AbsLattepp.Expr) }
Expr
  : Expr1 '||' Expr { (fst $1, AbsLattepp.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (AbsLattepp.BNFC'Position, [AbsLattepp.Expr]) }
ListExpr
  : {- empty -} { (AbsLattepp.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (AbsLattepp.BNFC'Position, AbsLattepp.AddOp) }
AddOp
  : '+' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Plus (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Minus (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (AbsLattepp.BNFC'Position, AbsLattepp.MulOp) }
MulOp
  : '*' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Times (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Div (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.Mod (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (AbsLattepp.BNFC'Position, AbsLattepp.RelOp) }
RelOp
  : '<' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.LTH (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.LE (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.GTH (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.GE (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.EQU (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1), AbsLattepp.NE (uncurry AbsLattepp.BNFC'Position (tokenLineCol $1))) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err AbsLattepp.Program
pProgram = fmap snd . pProgram_internal
}
