Syntax/ParLattepp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParLattepp.y
-----------------------------------------------------------------------------

state 94 contains 1 shift/reduce conflicts.
state 128 contains 1 shift/reduce conflicts.
state 145 contains 1 shift/reduce conflicts.
state 154 contains 1 shift/reduce conflicts.
state 155 contains 1 shift/reduce conflicts.
state 159 contains 1 shift/reduce conflicts.

rule 50 is unused
rule 51 is unused
rule 52 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> 'class' Ident ClassBlock                 (6)
	TopDef -> 'class' Ident 'extends' Ident ClassBlock   (7)
	ListTopDef -> TopDef                               (8)
	ListTopDef -> TopDef ListTopDef                    (9)
	Arg -> Type Ident                                  (10)
	ListArg ->                                         (11)
	ListArg -> Arg                                     (12)
	ListArg -> Arg ',' ListArg                         (13)
	Block -> '{' ListStmt '}'                          (14)
	ClassBlock -> '{' ListClassStmt '}'                (15)
	ListClassStmt ->                                   (16)
	ListClassStmt -> ClassStmt ListClassStmt           (17)
	ListStmt ->                                        (18)
	ListStmt -> Stmt ListStmt                          (19)
	ClassStmt -> ';'                                   (20)
	ClassStmt -> Type ListItem ';'                     (21)
	ClassStmt -> Type Ident '(' ListArg ')' Block      (22)
	Stmt -> ';'                                        (23)
	Stmt -> Block                                      (24)
	Stmt -> Type ListItem ';'                          (25)
	Stmt -> ExtIdent '=' Expr ';'                      (26)
	Stmt -> ExtIdent '++' ';'                          (27)
	Stmt -> ExtIdent '--' ';'                          (28)
	Stmt -> 'return' Expr ';'                          (29)
	Stmt -> 'return' ';'                               (30)
	Stmt -> 'if' '(' Expr ')' Stmt                     (31)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (32)
	Stmt -> 'while' '(' Expr ')' Stmt                  (33)
	Stmt -> 'for' '(' Type Ident ':' ExtIdent ')' Stmt   (34)
	Stmt -> Expr ';'                                   (35)
	Item -> Ident                                      (36)
	Item -> Ident '=' Expr                             (37)
	ListItem -> Item                                   (38)
	ListItem -> Item ',' ListItem                      (39)
	ExtIdent -> Ident                                  (40)
	ExtIdent -> Ident '[' Expr ']'                     (41)
	ExtIdent -> Expr6 '.' Expr6                        (42)
	PrimType -> 'int'                                  (43)
	PrimType -> 'string'                               (44)
	PrimType -> 'boolean'                              (45)
	PrimType -> 'void'                                 (46)
	Type -> PrimType                                   (47)
	Type -> Ident                                      (48)
	Type -> Type '[]'                                  (49)
	ListType ->                                        (50)
	ListType -> Type                                   (51)
	ListType -> Type ',' ListType                      (52)
	Expr7 -> '(' Ident ')' Expr6                       (53)
	Expr7 -> '(' PrimType ')' Expr6                    (54)
	Expr7 -> '(' Expr ')'                              (55)
	Expr6 -> 'new' Ident                               (56)
	Expr6 -> 'new' Type '[' Expr ']'                   (57)
	Expr6 -> 'null'                                    (58)
	Expr6 -> Expr6 '.' Expr6                           (59)
	Expr6 -> Ident '[' Expr ']'                        (60)
	Expr6 -> Ident                                     (61)
	Expr6 -> Integer                                   (62)
	Expr6 -> 'true'                                    (63)
	Expr6 -> 'false'                                   (64)
	Expr6 -> Ident '(' ListExpr ')'                    (65)
	Expr6 -> String                                    (66)
	Expr6 -> Expr7                                     (67)
	Expr5 -> '-' Expr6                                 (68)
	Expr5 -> '!' Expr6                                 (69)
	Expr5 -> Expr6                                     (70)
	Expr4 -> Expr4 MulOp Expr5                         (71)
	Expr4 -> Expr5                                     (72)
	Expr3 -> Expr3 AddOp Expr4                         (73)
	Expr3 -> Expr4                                     (74)
	Expr2 -> Expr2 RelOp Expr3                         (75)
	Expr2 -> Expr3                                     (76)
	Expr1 -> Expr2 '&&' Expr1                          (77)
	Expr1 -> Expr2                                     (78)
	Expr -> Expr1 '||' Expr                            (79)
	Expr -> Expr1                                      (80)
	ListExpr ->                                        (81)
	ListExpr -> Expr                                   (82)
	ListExpr -> Expr ',' ListExpr                      (83)
	AddOp -> '+'                                       (84)
	AddOp -> '-'                                       (85)
	MulOp -> '*'                                       (86)
	MulOp -> '/'                                       (87)
	MulOp -> '%'                                       (88)
	RelOp -> '<'                                       (89)
	RelOp -> '<='                                      (90)
	RelOp -> '>'                                       (91)
	RelOp -> '>='                                      (92)
	RelOp -> '=='                                      (93)
	RelOp -> '!='                                      (94)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'class'        { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'extends'      { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'new'          { PT _ (TS _ 34) }
	'null'         { PT _ (TS _ 35) }
	'return'       { PT _ (TS _ 36) }
	'string'       { PT _ (TS _ 37) }
	'true'         { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6, 7
	ListTopDef      rules 8, 9
	Arg             rule  10
	ListArg         rules 11, 12, 13
	Block           rule  14
	ClassBlock      rule  15
	ListClassStmt   rules 16, 17
	ListStmt        rules 18, 19
	ClassStmt       rules 20, 21, 22
	Stmt            rules 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35
	Item            rules 36, 37
	ListItem        rules 38, 39
	ExtIdent        rules 40, 41, 42
	PrimType        rules 43, 44, 45, 46
	Type            rules 47, 48, 49
	ListType        rules 50, 51, 52
	Expr7           rules 53, 54, 55
	Expr6           rules 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67
	Expr5           rules 68, 69, 70
	Expr4           rules 71, 72
	Expr3           rules 73, 74
	Expr2           rules 75, 76
	Expr1           rules 77, 78
	Expr            rules 79, 80
	ListExpr        rules 81, 82, 83
	AddOp           rules 84, 85
	MulOp           rules 86, 87, 88
	RelOp           rules 89, 90, 91, 92, 93, 94

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 9
	'class'        shift, and enter state 10
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	PrimType       goto state 7
	Type           goto state 8

State 1


	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 48)

	'[]'           reduce using rule 48
	L_Ident        reduce using rule 48


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 8)
	ListTopDef -> TopDef . ListTopDef                   (rule 9)

	'boolean'      shift, and enter state 9
	'class'        shift, and enter state 10
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 8

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 17
	PrimType       goto state 7
	Type           goto state 8

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	Type -> PrimType .                                  (rule 47)

	'['            reduce using rule 47
	'[]'           reduce using rule 47
	L_Ident        reduce using rule 47


State 8

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]'                                 (rule 49)

	'[]'           shift, and enter state 16
	L_Ident        shift, and enter state 2

	Ident          goto state 15

State 9

	PrimType -> 'boolean' .                             (rule 45)

	')'            reduce using rule 45
	'['            reduce using rule 45
	'[]'           reduce using rule 45
	L_Ident        reduce using rule 45


State 10

	TopDef -> 'class' . Ident ClassBlock                (rule 6)
	TopDef -> 'class' . Ident 'extends' Ident ClassBlock    (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 14

State 11

	PrimType -> 'int' .                                 (rule 43)

	')'            reduce using rule 43
	'['            reduce using rule 43
	'[]'           reduce using rule 43
	L_Ident        reduce using rule 43


State 12

	PrimType -> 'string' .                              (rule 44)

	')'            reduce using rule 44
	'['            reduce using rule 44
	'[]'           reduce using rule 44
	L_Ident        reduce using rule 44


State 13

	PrimType -> 'void' .                                (rule 46)

	')'            reduce using rule 46
	'['            reduce using rule 46
	'[]'           reduce using rule 46
	L_Ident        reduce using rule 46


State 14

	TopDef -> 'class' Ident . ClassBlock                (rule 6)
	TopDef -> 'class' Ident . 'extends' Ident ClassBlock    (rule 7)

	'extends'      shift, and enter state 20
	'{'            shift, and enter state 21

	ClassBlock     goto state 19

State 15

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 18


State 16

	Type -> Type '[]' .                                 (rule 49)

	'['            reduce using rule 49
	'[]'           reduce using rule 49
	L_Ident        reduce using rule 49


State 17

	ListTopDef -> TopDef ListTopDef .                   (rule 9)

	%eof           reduce using rule 9


State 18

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 11
	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 27
	ListArg        goto state 28
	PrimType       goto state 7
	Type           goto state 29

State 19

	TopDef -> 'class' Ident ClassBlock .                (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_Ident        reduce using rule 6
	%eof           reduce using rule 6


State 20

	TopDef -> 'class' Ident 'extends' . Ident ClassBlock    (rule 7)

	L_Ident        shift, and enter state 2

	Ident          goto state 26

State 21

	ClassBlock -> '{' . ListClassStmt '}'               (rule 15)

	';'            shift, and enter state 25
	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	'}'            reduce using rule 16
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	ListClassStmt  goto state 22
	ClassStmt      goto state 23
	PrimType       goto state 7
	Type           goto state 24

State 22

	ClassBlock -> '{' ListClassStmt . '}'               (rule 15)

	'}'            shift, and enter state 38


State 23

	ListClassStmt -> ClassStmt . ListClassStmt          (rule 17)
